Got partway through q2

--- a/class/hw5/q1.ipynb
+++ b/class/hw5/q1.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -298,6 +298,16 @@
    },
    "outputs": [],
    "source": [
+    "def eightpoint_A(pts1, pts2):\n",
+    "    \"\"\"Create a matrix to solve for the Fundamental Matrix. Check out slide 25 in L18.\"\"\"\n",
+    "    A = []\n",
+    "    for pt1, pt2 in zip(pts1, pts2):\n",
+    "        A.append(\n",
+    "            np.hstack([pt2[0] * pt1, pt2[1] * pt1, pt2[2] * pt1])\n",
+    "        )\n",
+    "    return np.array(A)\n",
+    "\n",
+    "\n",
     "def eightpoint(pts1, pts2, M):\n",
     "    '''\n",
     "    Q1.1: Eight Point Algorithm for calculating the fundamental matrix\n",
@@ -309,17 +319,20 @@
     "    ***\n",
     "    HINTS:\n",
     "    (1) Normalize the input pts1 and pts2 using the matrix T.\n",
-    "    (2) Setup the eight point algorithm's equation.\n",
+    "    (2) Set up the eight point algorithm's equation.\n",
     "    (3) Solve for the least square solution using SVD. \n",
-    "    (4) Use the function `_singularize` (provided) to enforce the singularity condition. \n",
+    "    (4) Use the function `_singularize` (provided) to enforce the singularity condition.\n",
     "    (5) Use the function `refineF` (provided) to refine the computed fundamental matrix. \n",
-    "        (Remember to usethe normalized points instead of the original points)\n",
+    "        (Remember to use the normalized points instead of the original points)\n",
     "    (6) Unscale the fundamental matrix\n",
     "\n",
     "    '''\n",
     "\n",
+    "    # Necessary initial assumption\n",
+    "    assert pts1.shape == pts2.shape\n",
+    "    \n",
     "    F = None # output fundamental matrix \n",
-    "    N = pts1.shape[0] # Extrating the number of points\n",
+    "    N = pts1.shape[0] # Extracting the number of points\n",
     "    \n",
     "    # Converting the points to homogenous coordinates\n",
     "    pts1_homogenous, pts2_homogenous = toHomogenous(pts1), toHomogenous(pts2)\n",
@@ -329,20 +342,64 @@
     "    \n",
     "    # ----- TODO -----\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
     "    \n",
+    "    # (1) Normalize the input pts1 and pts2 using the matrix T.\n",
+    "    # T @ pts1.T = pts1 @ T.T = pts1 @ T\n",
+    "    pts1_scaled = pts1_homogenous @ T\n",
+    "    pts2_scaled = pts2_homogenous @ T\n",
+    "\n",
+    "    # (2) Set up the eight point algorithm's equation.\n",
+    "    A = eightpoint_A(pts1_scaled, pts2_scaled)\n",
+    "\n",
+    "    # (3) Solve for the least square solution using SVD.\n",
+    "    u, sigma, vt = np.linalg.svd(A)\n",
+    "    # Getting the last column of V is the same as the last row of V.T\n",
+    "    F = vt[-1].reshape((3, 3))\n",
+    "\n",
+    "    # (4) Use the function `_singularize` (provided) to enforce the singularity condition.\n",
+    "    F = _singularize(F)\n",
+    "\n",
+    "    # (5) Use the function `refineF` (provided) to refine the computed fundamental matrix.\n",
+    "    # Unfortunately refineF (implicitly) requires (N, 2), so drop a column\n",
+    "    F = refineF(F, pts1_scaled[:, :2], pts2_scaled[:, :2])\n",
     "    \n",
-    "    F = F/F[2,2] #Finding the unique fundamental matrix by setting the scale to 1. \n",
+    "    # (6) Unscale the fundamental matrix (remember, T is diagonal so T.T = T)\n",
+    "    F = T @ F @ T\n",
+    "\n",
+    "    # Finding the unique fundamental matrix by setting the scale to 1 on lower-right.\n",
+    "    F = F / F[2,2]\n",
     "    return F\n",
-    "\n"
+    "\n",
+    "\n",
+    "# # REMEMBER, THEY HAVE DEFINED x AS COLUMN (axis1) AND y AS ROW (axis0)\n",
+    "# # Also, pts1 and pts2 are supposed to be (x, y), so flip these before\n",
+    "# # visualizing on an image\n",
+    "# p1 = np.array([\n",
+    "#     [10, 8],\n",
+    "#     [14, 9],\n",
+    "#     [18, 8],\n",
+    "#     [5, 25],\n",
+    "#     [17, 15],\n",
+    "#     [62, 6],\n",
+    "#     [13, 59],\n",
+    "#     [40, 50],\n",
+    "#     [60, 30],\n",
+    "#     [50, 25],\n",
+    "# ])\n",
+    "# p2 = p1.copy()\n",
+    "# M = 70\n",
+    "# F = eightpoint(p1, p2, M)\n",
+    "\n",
+    "# im1 = plt.imread('data/im1.png')\n",
+    "# im2 = im1.copy()\n",
+    "# displayEpipolarF(im1, im2, F)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "deletable": false,
-    "editable": false,
     "nbgrader": {
      "cell_type": "code",
      "checksum": "0c8977f8a55b36a7b88a0ca16b1c99bb",
@@ -354,7 +411,22 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Optimization terminated successfully.\n",
+      "         Current function value: 0.000107\n",
+      "         Iterations: 8\n",
+      "         Function evaluations: 894\n",
+      "[[-0.      0.     -0.2519]\n",
+      " [ 0.     -0.      0.0026]\n",
+      " [ 0.2422 -0.0068  1.    ]]\n",
+      "Error: 0.3989503498989335\n"
+     ]
+    }
+   ],
    "source": [
     "# Load images and visualize epipolar lines. \n",
     "np.set_printoptions(precision=4, suppress=1)\n",
@@ -372,12 +444,12 @@
     "print(\"Error:\", np.mean(calc_epi_error(pts1_homogenous, pts2_homogenous, F)))\n",
     "\n",
     "## Important!! Uncomment this line to visualize, but before you submit, \n",
-    "displayEpipolarF(im1, im2, F)"
+    "# displayEpipolarF(im1, im2, F)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -393,7 +465,18 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Optimization terminated successfully.\n",
+      "         Current function value: 0.000107\n",
+      "         Iterations: 8\n",
+      "         Function evaluations: 894\n"
+     ]
+    }
+   ],
    "source": [
     "# Simple Tests to verify your implmentation:\n",
     "\n",
@@ -415,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -470,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -486,6 +569,26 @@
    },
    "outputs": [],
    "source": [
+    "def sevenpoint_A(pts1, pts2):\n",
+    "    \"\"\"Recreating this from the given blog post, but I don't think we ever saw this before.\n",
+    "    https://imkaywu.github.io/blog/2017/06/fundamental-matrix/\n",
+    "    \"\"\"\n",
+    "    A = []\n",
+    "    for pt1, pt2 in zip(pts1, pts2):\n",
+    "        A.append(\n",
+    "            np.hstack([pt2[0] * pt1, pt2[1] * pt1, pt2[2] * pt1])\n",
+    "        )\n",
+    "    return np.array(A)\n",
+    "\n",
+    "\n",
+    "def get_matrix_determinant(matrices, idx1, idx2, idx3):\n",
+    "    matrix = np.zeros((3, 3))\n",
+    "    matrix[:, 0] = matrices[idx1][:, 0]\n",
+    "    matrix[:, 1] = matrices[idx2][:, 1]\n",
+    "    matrix[:, 2] = matrices[idx3][:, 2]\n",
+    "    return np.linalg.det(matrix)\n",
+    "\n",
+    "\n",
     "def sevenpoint(pts1, pts2, M):\n",
     "    '''\n",
     "    Q1.2: Seven Point Algorithm for calculating the fundamental matrix\n",
@@ -505,16 +608,91 @@
     "        Use np.polynomial.polynomial.polyroots to solve for the roots\n",
     "    (6) Unscale the fundamental matrixes and return as Farray\n",
     "    '''\n",
+    "\n",
+    "    # Necessary initial assumption\n",
+    "    assert pts1.shape == pts2.shape\n",
+    "    \n",
+    "    F = None # output fundamental matrix \n",
+    "    N = pts1.shape[0] # Extracting the number of points\n",
+    "    \n",
+    "    # Converting the points to homogenous coordinates\n",
+    "    pts1_homogenous, pts2_homogenous = toHomogenous(pts1), toHomogenous(pts2)\n",
+    "    \n",
+    "    # Computing the 3x3 matrix used to normalize corresponding points. \n",
+    "    T = np.diag([1/M,1/M,1])\n",
     "    Farray = []\n",
-    "    # ----- TODO -----\n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
-    "    return Farray\n"
+    "\n",
+    "    # Normalize the input pts1 and pts2 using the matrix T.\n",
+    "    # T @ pts1.T = pts1 @ T.T = pts1 @ T\n",
+    "    pts1_scaled = pts1_homogenous @ T\n",
+    "    pts2_scaled = pts2_homogenous @ T\n",
+    "\n",
+    "    # Set up the seven point algorithm's equation.\n",
+    "    A = sevenpoint_A(pts1_scaled, pts2_scaled)\n",
+    "\n",
+    "    # Solve for the least square solution using SVD, null space of two\n",
+    "    u, sigma, vt = np.linalg.svd(A)\n",
+    "    # Getting the last columns of V is the same as the last rows of V.T\n",
+    "    F1 = vt[-2].reshape((3, 3))\n",
+    "    F2 = vt[-1].reshape((3, 3))\n",
+    "\n",
+    "    # This is an extremely opaque step, taken from the blog post. Not really sure what's happening here.\n",
+    "    def D(*args):\n",
+    "        return get_matrix_determinant([F1, F2], *args)\n",
+    "    coefficients = []\n",
+    "    coefficients.append(\n",
+    "        -D(1, 0, 0) +   D(0, 1, 1) +   D(0, 0, 0) +   D(1, 1, 0) +   D(1, 0, 1) - D(0, 1, 0) -  D(0, 0, 1) - D(1, 1, 1)\n",
+    "    )\n",
+    "    coefficients.append(\n",
+    "         D(0, 0, 1) - 2*D(0, 1, 1) - 2*D(1, 0, 1) +   D(1, 0, 0) - 2*D(1, 1, 0) + D(0, 1, 0) +3*D(1, 1, 1)\n",
+    "    )\n",
+    "    coefficients.append(\n",
+    "         D(1, 1, 0) +   D(0, 1, 1) +   D(1, 0, 1) - 3*D(1, 1, 1)\n",
+    "    )\n",
+    "    coefficients.append(\n",
+    "         D(1, 1, 1)\n",
+    "    )\n",
+    "    \n",
+    "    # Find the roots of this cubic\n",
+    "    roots = np.polynomial.polynomial.polyroots(coefficients)\n",
+    "    Farray = []\n",
+    "    for root in roots:\n",
+    "        # Make a combined matrix based on the root, and take the SVD of it\n",
+    "        F = root * F1 + (1 - root) * F2\n",
+    "        Fu, Fsigma, Fvt = np.linalg.svd(F)\n",
+    "        e1 = Fvt[-1]\n",
+    "        # Then check the signs of various combinations (also very opaque)\n",
+    "        e1_pts1 = np.cross(e1, pts1_homogenous)\n",
+    "        F_pts2 = pts2_homogenous @ F.T\n",
+    "        combined = (F_pts2 * e1_pts1).sum(axis=1)\n",
+    "        if np.all(combined > 0) or np.all(combined < 0):\n",
+    "            F = _singularize(F)\n",
+    "            # Unscale the fundamental matrix (remember, T is diagonal so T.T = T)\n",
+    "            F = T @ F @ T\n",
+    "            # Find the unique fundamental matrix by setting the scale to 1 on lower-right.\n",
+    "            F = F / F[2,2]\n",
+    "            Farray.append(F)\n",
+    "    \n",
+    "    return Farray\n",
+    "\n",
+    "\n",
+    "# # Pick some arbitrary points\n",
+    "# matches = np.load(\"data/some_corresp.npz\")\n",
+    "# pts1 = matches[\"pts1\"][[5, 25, 50, 65, 70, 90, 100]]\n",
+    "# pts2 = matches[\"pts2\"][[5, 25, 50, 65, 70, 90, 100]]\n",
+    "# M = max(np.max(matches[\"pts1\"]), np.max(matches[\"pts2\"]))\n",
+    "# Farray = sevenpoint(pts1, pts2, M)\n",
+    "\n",
+    "# for F in Farray:\n",
+    "#     print(F)\n",
+    "#     im1 = plt.imread('data/im1.png')\n",
+    "#     im2 = plt.imread('data/im2.png')\n",
+    "#     displayEpipolarF(im1, im2, F)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -530,7 +708,15 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error: 0.6612102875496493\n"
+     ]
+    }
+   ],
    "source": [
     "# Full set of tests; you will get full points for coding if you pass the following tests. \n",
     "\n",
@@ -573,13 +759,21 @@
     "assert(np.linalg.matrix_rank(F) == 2)\n",
     "assert(np.mean(calc_epi_error(pts1_homogenous, pts2_homogenous, F)) < 1)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "celltoolbar": "Edit Metadata",
   "kernelspec": {
-   "display_name": "Python [conda env:cv] *",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-cv-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -591,7 +785,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.10"
   },
   "toc": {
    "base_numbering": 1,
