Done with auto-grader at least

--- a/class/hw5/q1.ipynb
+++ b/class/hw5/q1.ipynb
@@ -50,10 +50,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "deletable": false,
-    "editable": false,
     "nbgrader": {
      "cell_type": "code",
      "checksum": "c4128c2d5a4a1496d8005ceaed4e5a96",
@@ -157,7 +156,8 @@
     "    f = scipy.optimize.fmin_powell(\n",
     "        lambda x: _objective_F(x, pts1, pts2), F.reshape([-1]),\n",
     "        maxiter=100000,\n",
-    "        maxfun=10000\n",
+    "        maxfun=10000,\n",
+    "        disp=0\n",
     "    )\n",
     "    return _singularize(f.reshape([3, 3]))\n",
     "\n",
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -416,10 +416,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Optimization terminated successfully.\n",
-      "         Current function value: 0.000107\n",
-      "         Iterations: 8\n",
-      "         Function evaluations: 894\n",
       "[[-0.      0.     -0.2519]\n",
       " [ 0.     -0.      0.0026]\n",
       " [ 0.2422 -0.0068  1.    ]]\n",
@@ -449,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -465,18 +461,7 @@
      "task": false
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Optimization terminated successfully.\n",
-      "         Current function value: 0.000107\n",
-      "         Iterations: 8\n",
-      "         Function evaluations: 894\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Simple Tests to verify your implmentation:\n",
     "\n",
@@ -498,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -553,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -657,6 +642,12 @@
     "    roots = np.polynomial.polynomial.polyroots(coefficients)\n",
     "    Farray = []\n",
     "    for root in roots:\n",
+    "        # Weed out imaginary roots\n",
+    "        if abs(np.imag(root)) > 1e-8:\n",
+    "            continue\n",
+    "        # Get rid of any tiny floating point parts\n",
+    "        root = np.real(root)\n",
+    "        \n",
     "        # Make a combined matrix based on the root, and take the SVD of it\n",
     "        F = root * F1 + (1 - root) * F2\n",
     "        Fu, Fsigma, Fvt = np.linalg.svd(F)\n",
@@ -672,7 +663,7 @@
     "            # Find the unique fundamental matrix by setting the scale to 1 on lower-right.\n",
     "            F = F / F[2,2]\n",
     "            Farray.append(F)\n",
-    "    \n",
+    "\n",
     "    return Farray\n",
     "\n",
     "\n",
@@ -692,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {
     "deletable": false,
     "editable": false,
