--- a/class/hw5/q3.ipynb
+++ b/class/hw5/q3.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -154,21 +154,30 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration 0\n",
+      "Found model with 111/140 inliers, better than 0. Average inlier error 1.0930643187040991 px^2\n"
+     ]
+    }
+   ],
    "source": [
     "def ransacF(pts1, pts2, M):\n",
     "    '''\n",
     "    Q3.1: RANSAC method.\n",
     "        Input:  pts1, Nx2 Matrix\n",
     "                pts2, Nx2 Matrix\n",
-    "                M, a scaler parameter\n",
+    "                M, a scalar parameter\n",
     "        Output: F, the fundamental matrix\n",
     "                inlier_curr, Nx1 bool vector set to true for inliers\n",
     "    ***\n",
     "    Hints:\n",
-    "    (1) You can use the calc_epi_error from q1 with threshold to calcualte inliers. Tune the threshold based on \n",
-    "        the results/expected number of inliners. You can also define your own metric. \n",
-    "    (2) Use the seven point alogrithm to estimate the fundamental matrix as done in q1\n",
+    "    (1) You can use the calc_epi_error from q1 with threshold to calculate inliers. Tune the threshold based on \n",
+    "        the results/expected number of inliers. You can also define your own metric. \n",
+    "    (2) Use the seven point algorithm to estimate the fundamental matrix as done in q1\n",
     "    (3) Choose the resulting F that has the most number of inliers\n",
     "    (4) You can increase the nIters to bigger/smaller values\n",
     "        \n",
@@ -176,13 +185,47 @@
     "    N = pts1.shape[0]\n",
     "    pts1_homo, pts2_homo = toHomogenous(pts1), toHomogenous(pts2)\n",
     "    threshold = 10\n",
-    "    max_itaration = 1000\n",
+    "    max_iterations = 1000\n",
     "    best_inlier = 0\n",
+    "    F = None\n",
     "    inlier_curr = None\n",
+    "\n",
     "    # ----- TODO -----\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
-    "    return F, inlier_curr\n",
+    "\n",
+    "    NUM_REQUIRED_INLIERS = 10\n",
+    "    # Initial threshold is for checking the sevenpoint pass\n",
+    "    INITIAL_THRESHOLD = 25\n",
+    "    # Tighter threshold is for checking the eightpoint pass with more points\n",
+    "    TIGHTER_THRESHOLD = 9\n",
+    "    # If we hit this fraction of inliers, just end it\n",
+    "    CONVERGE = 0.7\n",
+    "\n",
+    "    indices = np.array(range(pts1.shape[0]))\n",
+    "    for i in range(max_iterations):\n",
+    "        if i % 100 == 0:\n",
+    "            print(f\"Iteration {i}\")\n",
+    "        index_option = np.random.choice(indices, size=7, replace=False)\n",
+    "        F_array_option = sevenpoint(pts1[index_option], pts2[index_option], M)\n",
+    "        for F_option in F_array_option:\n",
+    "            error = calc_epi_error(pts1_homo, pts2_homo, F_option)\n",
+    "            inlier_mask_option = error < INITIAL_THRESHOLD\n",
+    "            if sum(inlier_mask_option) < NUM_REQUIRED_INLIERS:\n",
+    "                continue\n",
+    "            F_better = eightpoint(pts1[inlier_mask_option], pts2[inlier_mask_option], M)\n",
+    "            error_better = calc_epi_error(pts1_homo, pts2_homo, F_better)\n",
+    "            inlier_mask_better = error_better < TIGHTER_THRESHOLD\n",
+    "            num_inliers = sum(inlier_mask_better)\n",
+    "            if num_inliers > best_inlier:\n",
+    "                print(f\"Found model with {num_inliers}/{len(pts1)} inliers, better than {best_inlier}.\"\n",
+    "                      f\" Average inlier error {np.average(error_better[inlier_mask_better])} px^2\")\n",
+    "                F = F_better\n",
+    "                best_inlier = num_inliers\n",
+    "            # Just return if we get sufficient inliers\n",
+    "            if num_inliers / len(pts1) > CONVERGE:\n",
+    "                return F, best_inlier\n",
+    "\n",
+    "    return F, best_inlier\n",
     "\n",
     "\n",
     "np.random.seed(0)\n",
@@ -198,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -262,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -287,7 +330,22 @@
     "    '''\n",
     "    # ----- TODO -----\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    if r.shape == (3,):\n",
+    "        r = r.reshape((3, 1))\n",
+    "    assert r.shape == (3, 1)\n",
+    "\n",
+    "    theta = np.linalg.norm(r)\n",
+    "    unit = r / theta\n",
+    "    # Define the matrix version of a cross-product\n",
+    "    skew = np.array([\n",
+    "        [ 0,          -unit[2, 0],  unit[1, 0]],\n",
+    "        [ unit[2, 0],  0,          -unit[0, 0]],\n",
+    "        [-unit[1, 0],  unit[0, 0],  0],\n",
+    "    ])\n",
+    "    \n",
+    "    R = np.eye(3) * np.cos(theta) + \\\n",
+    "        (1 - np.cos(theta)) * unit @ unit.T + \\\n",
+    "        skew * np.sin(theta)\n",
     "    return R\n",
     "\n",
     "\n",
@@ -296,16 +354,58 @@
     "    Q5.2: Inverse Rodrigues formula.\n",
     "        Input:  R, a 3x3 rotation matrix\n",
     "        Output: r, a 3x1 vector\n",
+    "            WRONG - they want a (3,), it fails otherwise\n",
     "    '''\n",
     "    # ----- TODO -----\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
-    "    return r\n"
+    "    \n",
+    "    # Used implementation here instead of the PDF, it seems like there are some\n",
+    "    # missing conditions in the PDF\n",
+    "    # https://math.stackexchange.com/questions/83874/efficient-and-accurate-numerical-implementation-of-the-inverse-rodrigues-rotatio\n",
+    "    r = np.array([\n",
+    "        [R[2, 1] - R[1, 2]],\n",
+    "        [R[0, 2] - R[2, 0]],\n",
+    "        [R[1, 0] - R[0, 1]],\n",
+    "    ])\n",
+    "    t = np.trace(R)\n",
+    "    theta = np.arccos((t - 1) / 2)\n",
+    "    e = 1e-6\n",
+    "    \n",
+    "    # Create the sometimes necessary v vector\n",
+    "    a = np.argmax(np.diag(R))\n",
+    "    b = (a + 1) % 3\n",
+    "    c = (a + 2) % 3\n",
+    "    v = np.zeros((3, 1))\n",
+    "    s = np.sqrt(R[a, a] - R[b, b] - R[c, c] + 1)\n",
+    "    v[a] = s / 2\n",
+    "    v[b] = (1 / (2 * s)) * (R[b, a] + R[a, b])\n",
+    "    v[c] = (1 / (2 * s)) * (R[c, a] + R[a, c])\n",
+    "\n",
+    "    if t >= (3 - e):\n",
+    "        w = ((1/2) - (t-3)/12) * r\n",
+    "    elif t > (-1 + e):\n",
+    "        w = (theta / (2 * np.sin(theta))) * r\n",
+    "    else:\n",
+    "        w = np.pi * v / np.linalg.norm(v)\n",
+    "    return w.reshape(3)\n",
+    "\n",
+    "\n",
+    "# # Check for orthonormality\n",
+    "# R = rodrigues(np.array([[0.4], [2.5], [-1.1]]))\n",
+    "# for i in range(3):\n",
+    "#     assert np.isclose(np.linalg.norm(R[:, i]), 1.0)\n",
+    "# assert np.isclose(R[:, 0] @ R[:, 1], 0.0)\n",
+    "# assert np.isclose(R[:, 0] @ R[:, 2], 0.0)\n",
+    "# assert np.isclose(R[:, 1] @ R[:, 2], 0.0)\n",
+    "\n",
+    "# # Try to extract the old values\n",
+    "# r = invRodrigues(R)\n",
+    "# print(f\"Extracted values {r.T}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -400,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -414,8 +514,21 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "EOL while scanning string literal (<ipython-input-1-1afff25e5a0e>, line 21)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-1afff25e5a0e>\"\u001b[0;36m, line \u001b[0;32m21\u001b[0m\n\u001b[0;31m    print(f\"M2 recovered: {})\u001b[0m\n\u001b[0m                             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m EOL while scanning string literal\n"
+     ]
+    }
+   ],
    "source": [
+    "def toHomogenous(pts):\n",
+    "    return np.vstack([pts[:,0], pts[:,1], np.ones(pts.shape[0])]).T.copy()\n",
+    "\n",
+    "\n",
     "def rodriguesResidual(K1, M1, p1, K2, p2, x):\n",
     "    '''\n",
     "    Q3.3: Rodrigues residual.\n",
@@ -424,14 +537,28 @@
     "                p1, the 2D coordinates of points in image 1\n",
     "                K2, the intrinsics of camera 2\n",
     "                p2, the 2D coordinates of points in image 2\n",
-    "                x, the flattened concatenationg of P, r2, and t2.\n",
+    "                x, the flattened concatenation of P, r2, and t2.\n",
     "        Output: residuals, 4N x 1 vector, the difference between original \n",
     "                and estimated projections\n",
     "    '''\n",
     "    residuals = None\n",
     "    # ----- TODO -----\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "\n",
+    "    print(f\"M2 recovered: {M2}\")\n",
+    "    \n",
+    "    p1_homogeneous = toHomogenous(p1)\n",
+    "    p2_homogeneous = toHomogenous(p2)\n",
+    "\n",
+    "    p1_projogeneous = K1 @ M1 @ p1_homogeneous\n",
+    "    p2_projogeneous = K2 @ M2 @ p2_homogeneous\n",
+    "\n",
+    "    import ipdb; ipdb.set_trace()\n",
+    "    p1_proj = (p1_projogeneous[:, :2] / p1_projogeneous[:, 2])\n",
+    "    p2_proj = (p2_projogeneous[:, :2] / p2_projogeneous[:, 2])\n",
+    "    \n",
+    "    residuals = np.concatenate([(p1 - p1_proj).reshape([-1]),\n",
+    "                                (p2 - p2_proj).reshape([-1])])\n",
     "    return residuals\n",
     "\n",
     "\n",
@@ -458,7 +585,12 @@
     "    obj_start = obj_end = 0\n",
     "    # ----- TODO -----\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    \n",
+    "    # Build our Frankenstein x-vector\n",
+    "    \n",
+    "    print(f\"M2_init: {M2_init}\")\n",
+    "    rodriguesResidual(K1, M1, p1, K2, p2, x)\n",
+    "\n",
     "    return M2, P, obj_start, obj_end\n"
    ]
   },
@@ -514,9 +646,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:cv] *",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-cv-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -528,7 +660,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.10"
   },
   "toc": {
    "base_numbering": 1,
