--- a/class/hw5/Theory.ipynb
+++ b/class/hw5/Theory.ipynb
@@ -406,9 +406,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.6.9 64-bit ('cv': conda)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python36964bitcvconda063843457eb447a8aea88215c8a76c39"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -420,7 +420,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.10"
   },
   "toc": {
    "base_numbering": 1,
