--- a/class/hw5/Theory.ipynb
+++ b/class/hw5/Theory.ipynb
@@ -103,7 +103,35 @@
     }
    },
    "source": [
-    "YOUR ANSWER HERE"
+    "---\n",
+    "\n",
+    "First off, let's talk about some basic definitions. A homogeneous image point that goes through the coordinate origin of camera 1 will be\n",
+    "\\begin{align*}\n",
+    "    x_1 &= \\begin{bmatrix} 0 \\\\ 0 \\\\ 1 \\end{bmatrix}\n",
+    "\\end{align*}\n",
+    "\n",
+    "Another thing to note is that image coordinate line equations like $ax + by + c = 0$ consist of two parts. The first two components $(a, b)$ correspond to a direction vector perpendicular to the actual line out from the origin, and $c$ is a term that denotes distance along the vector. $c$ is not exactly distance in pixels, since there is a normalization term involving $a$ and $b$, but that's the idea.\n",
+    "\\begin{align*}\n",
+    "    \\ell_2 &= \\begin{bmatrix} a \\\\ b \\\\ c \\end{bmatrix}\n",
+    "\\end{align*}\n",
+    "\n",
+    "The important thing is that when a line passes through the image origin the distance term $c$ will be 0. With these two facts established let's look at the problem.\n",
+    "\n",
+    "For the Fundamental matrix $F$ between the two cameras, this relationship should always be true:\n",
+    "\\begin{align*}\n",
+    "    \\ell_2 &= F x_1\n",
+    "\\end{align*}\n",
+    "where $x_1$ is any pixel in the camera 1 and $\\ell_2$ is an epipolar line for the corresponding point in camera 2. This relationship should hold for any $x_1$, but the $F$ matrix should stay constant. Therefore we can investigate the structure of $F$ by using an $x_1$ point with notable constraints, such as the origin.\n",
+    "\n",
+    "When the origin of camera 1 is used as the $x_1$ point we know that the epipolar line should pass through the origin of camera 2 because principal axis of camera 2 is pointed at $P$. Therefore we know that the following relationship should be true:\n",
+    "\\begin{align*}\n",
+    "    \\begin{bmatrix} \\alpha \\\\ \\beta \\\\ 0 \\end{bmatrix} &= F \\begin{bmatrix} 0 \\\\ 0 \\\\ 1 \\end{bmatrix}\n",
+    "\\end{align*}\n",
+    "$\\alpha$ and $\\beta$ are arbitrary since we don't know how the cameras are oriented except that their centers hit the same point.\n",
+    "\n",
+    "For this statement to be true, we know that $F_{3, 3}$ must be 0. This is when doing matrix multiplication to get the last vector value because whatever is in $F_{3, 1}$ and $F_{3, 2}$ gets zeroed out by the zero values in $x_1$, and the only option for $F_{3, 3} * 1 = 0$ is when $F_{3, 3}$ is 0.\n",
+    "\n",
+    "---"
    ]
   },
   {
@@ -144,7 +172,47 @@
     }
    },
    "source": [
-    "YOUR ANSWER HERE"
+    "---\n",
+    "\n",
+    "For starters, let's talk about the Essential matrix for vision. It is defined so that a point from one camera is projected into an epipolar line in the other camera's coordinates. It is also defined as a combination of the real-world rotation and translation matrices.\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    \\ell_2 &= E x_1  && \\text{Again, $x_1$ is a point in camera 1, $\\ell_2$ an epipolar line in camera 2} \\\\\n",
+    "    E &= R t_x  && \\text{$R$ is rotation matrix from cam1 to cam2} \\\\\n",
+    "    & && \\text{$t_x$ is the cross-product version of translation from cam1 to cam2}\n",
+    "\\end{align*}\n",
+    "\n",
+    "Well, we're assuming for the purposes of this problem that we know $R$ (it's just $I$) and we know $t_x$ (it's the cross-product version of $t = [x_t, 0, 0]$ because translation only happens along the $x$-axis). Therefore we can construct $E$.\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    E &= I t_x \\\\\n",
+    "    &= t_x \\\\\n",
+    "    &= \\begin{bmatrix}\n",
+    "        0 &   0 &    0 \\\\\n",
+    "        0 &   0 & -x_t \\\\\n",
+    "        0 & x_t &    0 \\\\\n",
+    "    \\end{bmatrix}\n",
+    "\\end{align*}\n",
+    "\n",
+    "Now let's examine the epipolar line $\\ell_2$ formed by an **arbitrary** pixel value $x_1 = [x, y, 1]$ in camera 1.\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    \\ell_2 &= E x_1 \\\\\n",
+    "    &= \\begin{bmatrix}\n",
+    "        0 &   0 &    0 \\\\\n",
+    "        0 &   0 & -x_t \\\\\n",
+    "        0 & x_t &    0 \\\\\n",
+    "    \\end{bmatrix}\n",
+    "    \\begin{bmatrix} x \\\\ y \\\\ 1 \\end{bmatrix} \\\\\n",
+    "    &= \\begin{bmatrix} 0 \\\\ -x_t \\\\ y x_t \\end{bmatrix} \\\\\n",
+    "    &= \\begin{bmatrix} 0 \\\\ \\frac{-1}{y} \\\\ 1 \\end{bmatrix} \\\\\n",
+    "\\end{align*}\n",
+    "\n",
+    "We can see two things here:\n",
+    "1. The translation distance doesn't matter, it doesn't change the epipolar line at all\n",
+    "2. No matter what, there is no $x$ component to the line equation, only $y$ values. As discussed in Q1.1, lines are perpendicular to the $(a, b)$ vector in the line equation. This means that there is no $y$ component in the epipolar line, it travels only along $x$, which is what we wanted to show.\n",
+    "\n",
+    "---"
    ]
   },
   {
