Finished it all and submitted

--- a/class/hw5/q1.ipynb
+++ b/class/hw5/q1.ipynb
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -445,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -674,19 +674,24 @@
     "# M = max(np.max(matches[\"pts1\"]), np.max(matches[\"pts2\"]))\n",
     "# Farray = sevenpoint(pts1, pts2, M)\n",
     "\n",
+    "# errors = []\n",
     "# for F in Farray:\n",
-    "#     print(F)\n",
-    "#     im1 = plt.imread('data/im1.png')\n",
-    "#     im2 = plt.imread('data/im2.png')\n",
-    "#     displayEpipolarF(im1, im2, F)"
+    "#     errors.append(np.mean(calc_epi_error(pts1_homo,pts2_homo, F)))\n",
+    "# min_idx = np.argmin(np.abs(np.array(errors)))\n",
+    "# F = Farray[min_idx]\n",
+    "\n",
+    "# print(F)\n",
+    "# print(\"Error:\", ress[min_idx])\n",
+    "# im1 = plt.imread('data/im1.png')\n",
+    "# im2 = plt.imread('data/im2.png')\n",
+    "# displayEpipolarF(im1, im2, F)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {
     "deletable": false,
-    "editable": false,
     "nbgrader": {
      "cell_type": "code",
      "checksum": "770887e9b7f382b7bf3a87b27d6f3ef6",
@@ -704,6 +709,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "F: [[ 0.      0.     -0.3221]\n",
+      " [ 0.     -0.      0.0006]\n",
+      " [ 0.3101 -0.0036  1.    ]]\n",
       "Error: 0.6612102875496493\n"
      ]
     }
@@ -743,12 +751,15 @@
     "        \n",
     "min_idx = np.argmin(np.abs(np.array(ress)))\n",
     "F = F_res[min_idx]\n",
+    "print(\"F:\", F)\n",
     "print(\"Error:\", ress[min_idx])\n",
     "\n",
     "assert(F.shape == (3, 3))\n",
     "assert(F[2, 2] == 1)\n",
     "assert(np.linalg.matrix_rank(F) == 2)\n",
-    "assert(np.mean(calc_epi_error(pts1_homogenous, pts2_homogenous, F)) < 1)\n"
+    "assert(np.mean(calc_epi_error(pts1_homogenous, pts2_homogenous, F)) < 1)\n",
+    "\n",
+    "# displayEpipolarF(im1, im2, F)"
    ]
   },
   {
