Making progress Q2, not done

--- a/class/hw6/q1.ipynb
+++ b/class/hw6/q1.ipynb
@@ -531,7 +531,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def affine_warp(spline, M, rect, image, dx=0, dy=0):\n",
+    "def affine_warp(spline, M, rect, image, compute_gradients=True):\n",
     "    # Get warped coordinates by first figuring out the template (rect) coordinates\n",
     "    x1, y1, x2, y2 = rect\n",
     "    x_grid, y_grid = np.meshgrid(np.arange(x1, x2+1),\n",
@@ -547,9 +547,15 @@
     "    x_warped, y_warped = grid_warped[0], grid_warped[1]\n",
     "    # Return specific warped values. Remember that RectBivariateSpline uses an\n",
     "    # opposite x/y vocabulary from us\n",
+    "    if compute_gradients:\n",
+    "        grad_x = spline(x=y_warped, y=x_warped, dy=1, grid=False).reshape(x_grid.shape)\n",
+    "        grad_y = spline(x=y_warped, y=x_warped, dx=1, grid=False).reshape(x_grid.shape)\n",
+    "    else:\n",
+    "        grad_x = None\n",
+    "        grad_y = None\n",
     "    return (spline(x=y_warped, y=x_warped, grid=False).reshape(x_grid.shape),\n",
-    "            spline(x=y_warped, y=x_warped, dy=1, grid=False).reshape(x_grid.shape),\n",
-    "            spline(x=y_warped, y=x_warped, dx=1, grid=False).reshape(x_grid.shape),\n",
+    "            grad_x,\n",
+    "            grad_y,\n",
     "            x_warped,\n",
     "            y_warped)\n",
     "\n",
