Finished 2, started on theory

--- a/class/hw6/Theory.ipynb
+++ b/class/hw6/Theory.ipynb
@@ -145,7 +145,40 @@
     }
    },
    "source": [
-    "YOUR ANSWER HERE"
+    "Using the affine warp model the equation (page 2 of https://www.ri.cmu.edu/pub_files/pub3/baker_simon_2002_3/baker_simon_2002_3.pdf) is a two vector that looks like\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    \\textbf{W} (x;p) = \\begin{bmatrix}\n",
+    "        (1 + p_1) x + p_3 y + p_5 \\\\\n",
+    "        p_2 x + (1 + p_4) y + p_6 \\\\\n",
+    "    \\end{bmatrix}\n",
+    "\\end{align*}\n",
+    "\n",
+    "To get $\\frac{\\partial \\textbf{W}}{\\partial \\textbf{p}}$ we want a matrix of the following form (page 3 of https://www.ri.cmu.edu/pub_files/pub3/baker_simon_2002_3/baker_simon_2002_3.pdf)\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    \\frac{\\partial \\textbf{W}}{\\partial p} = \\begin{bmatrix}\n",
+    "        \\frac{\\partial \\textbf{W}_x}{\\partial p_1} &\n",
+    "        \\frac{\\partial \\textbf{W}_x}{\\partial p_2} &\n",
+    "        ... &\n",
+    "        \\frac{\\partial \\textbf{W}_x}{\\partial p_6}\n",
+    "        \\\\\n",
+    "        \\frac{\\partial \\textbf{W}_y}{\\partial p_1} &\n",
+    "        \\frac{\\partial \\textbf{W}_y}{\\partial p_2} &\n",
+    "        ... &\n",
+    "        \\frac{\\partial \\textbf{W}_y}{\\partial p_6}\n",
+    "        \\\\\n",
+    "    \\end{bmatrix}\n",
+    "\\end{align*}\n",
+    "\n",
+    "This is simple to calculate, since all of the parameter terms are independent from one another. As stated in the linked PDF, we get.\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    \\frac{\\partial \\textbf{W}}{\\partial p} = \\begin{bmatrix}\n",
+    "        x & 0 & y & 0 & 1 & 0 \\\\\n",
+    "        0 & x & 0 & y & 0 & 1 \\\\\n",
+    "    \\end{bmatrix}\n",
+    "\\end{align*}"
    ]
   },
   {
