--- a/class/hw6/q1.ipynb
+++ b/class/hw6/q1.ipynb
@@ -531,11 +531,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def affine_warp(spline, M, rect, image, compute_gradients=True):\n",
+    "def affine_warp(spline, M, rect, image, buffer=1.0, compute_gradients=True):\n",
     "    # Get warped coordinates by first figuring out the template (rect) coordinates\n",
     "    x1, y1, x2, y2 = rect\n",
-    "    x_grid, y_grid = np.meshgrid(np.arange(x1, x2+1),\n",
-    "                                 np.arange(y1, y2+1),\n",
+    "    x_grid, y_grid = np.meshgrid(np.arange(x1, x2+buffer),\n",
+    "                                 np.arange(y1, y2+buffer),\n",
     "                                 indexing=\"xy\")\n",
     "    grid_homogeneous = np.vstack((\n",
     "        x_grid.flatten(),\n",
